styles/Work/ProjectCard.module.scss
@import "styles/variables.scss";

.projectCard {
  margin: 24px;
  padding: 24px;
  border-radius: 24px;
  background-color: $darkAccent;
  width: 80%;
  max-width: 1000px;

  display: flex;
  justify-content: stretch;
  align-items: center;

  $breakpoint: 975px;
  transition: box-shadow 0.4s;

  .title {
    text-align: center;
    margin-top: 16px;
    margin-bottom: 16px;
    h2,
    h3 {
      margin: 0;
    }

    h3 {
      color: #aaa;
    }
  }

  &:hover {
    box-shadow: 4px 8px 64px 4px $darkAccent;
  }

  @media (max-width: $breakpoint) {
    align-items: center;
    flex-direction: column;
  }

  .textArea {
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    flex-grow: 1;
    margin-left: 48px;

    @media (max-width: $breakpoint) {
      margin-left: 0px;
    }
  }

  img {
    height: 40vw !important;
    $maxHeight: 500px;
    $maxWidth: calc($maxHeight * 0.747217806);
    max-height: $maxHeight;

    /* max-height: $maxHeight; */
    border-radius: 24px;
    height: auto;
    @media (max-width: $breakpoint) {
      height: 20vw;
      $minHeight: 300px;
      min-width: calc($minHeight * 0.747217806);
      min-height: 300px;
    }
  }
}

